gcc/testsuite/rust/rustc/ui/impl-trait/issues/issue-70971.rs
fn main() {
    let x : (impl Copy,) = (true,);
// { dg-error ".E0562." "" { target *-*-* } .-1 }
}

